--- a/templates/AdminDashboard.html
+++ b/templates/AdminDashboard.html
@@ -17,7 +17,7 @@
               </div>
               <ul class="nav-list">
                 <li>
-                  <a href="../home.html">
+                  <a href="/home">
                     <i class='bx bx-home'></i>
                     <span class="links_name">Home</span>
                   </a>
