--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
         <div class="topContainer">
             <div class="Image">
                 <a href="../home">
-                    <img class="pageLogo " src="{% static 'images/titanLogoTemp.png' %}"> 
+                  <img class="pageLogo" src="{% static 'images/logoWhite.svg' %}"> 
                 </a>
             </div>
 			<div class="links">
@@ -33,8 +33,7 @@
     </head>
 
     <div class = "heading">
-        <h1>Rocky Mountain</h1>
-        <h4>Work Service</h4>
+        <h1>Rocky Mountain Work Service</h1>
     </div>
 
     <section class="about-us">
@@ -49,41 +48,42 @@
             you're a seasoned contractor looking to expand your client base, or a new professional just starting out, 
             our website offers a range of job opportunities to fit your needs.
         </p>
-            <button onclick="window.location.href='contact.html';" class="contact-button">
+            <button onclick="window.location.href='../contact';" class="contact-button">
                 Contact Us
             </button>
             </div>
     </section>
     
     <body>
-        <div class="footer-wrap">
-            <div class="content-width">
-                <div class="container-fluid">
-                    <div class="row center">
-                        <div class="col-md-3">
-                            <div class="footer-logo left">
-                                <a href="https://titan307.com/team/">
-                                    <img src="{% static 'images/TitanLogo4Real.png' %}" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img>
-                                </a>
-                            </div>
+      <div class="footer-wrap">
+        <div class="content-width">
+            <div class="container-fluid">
+                <div class="row center">
+                    <div class="col-md-3">
+                        <div class="footer-logo left">
+                            <a href="https://titan307.com/team/">
+                                <img src="{% static 'images/logoWhite.svg' %}" itemprop="logo" alt="Logo" style="width:120px; margin-left:200px; background-image:none;"></img>
+                            </a>
                         </div>
-                        <div class="col-md-6"><div class="link">
-                            <div class="site-footer">
-                                <div class="footerLinks-actions">
-                                    <div class="about">
-                                        <span>
-                                            <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
-                                            <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
-                                        </span>
-                                    </div>
-                                        <a href="about.html" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
+                    </div>
+                    <div class="col-md-6"><div class="link">
+                        <div class="site-footer">
+                            <div class="footerLinks-actions">
+                                <div class="about">
+                                    <span>
+                                        <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
+                                        <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
                                     </span>
+                                
+                                    <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
                                 </div>
+                                  </span>
                             </div>
                         </div>
                     </div>
-                <div class="col-md-3"><div></div>
-        <script type="text/javascript"></script>
+                </div>
+            <div class="col-md-3"><div></div>
+    <script type="text/javascript"></script>
     </body>
 </html>
 
@@ -120,8 +120,11 @@
 
 .topContainer {
     background-color:  #052534;
+    background-image: url(../static/images/constructionBg.svg);
+    background-position-x: right;
+    background-repeat: no-repeat;
     overflow: hidden;
-    height: 110px;
+    height: 120px;
   }
   
   /* Style the links inside the navigation bar */
@@ -273,8 +276,7 @@ color: #000000;
 
 .pageLogo {
   float: left;
-  width: auto;
-  height: 80px;
+  width: 100px;
   margin: .5%;
   position: absolute;
 }
@@ -313,10 +315,10 @@ color: #000000;
 /***********Raf Footer***********/
 .footer-wrap .footerTabs a { font-size: 14px;font-weight: 300; }
 .footer-wrap .footerTabs a,.footer-wrap .footerLinks-actions a, .poweredby, .poweredby a { color: #fff; line-height: 2; }
-.footer-wrap .footerLinks-actions { margin-top: 30px;margin-left:400px }
+.footer-wrap .footerLinks-actions { margin-top: 30px;margin-left:250px }
 .footer-wrap .footerLinks-actions a, .poweredby, .poweredby a { font-size: 12px;margin-left:20px }
 .footer-wrap .about { color:white;margin-top: 20px;font-size: 12px;margin-left:-95px }
-.footer-wrap { background:#052534;padding-top:65px;padding-bottom:65px;padding-right:80px }
+.footer-wrap { background:#052534;padding-top:40px;padding-bottom:40px;padding-right:80px }
 .site-footer { color:white; }
 .footer-wrap .footerTabs a:hover, .footer-wrap .footerLinks-actions a:hover, .poweredby, .poweredby a:hover { color:#deff5b; }
 .footer-logo {}
