--- a/templates/home.html
+++ b/templates/home.html
@@ -73,8 +73,7 @@ nav a:hover{ /*
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(images/image.jpg);
-    opacity: 0.5;
+    background-image: url(../static/images/image.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -117,8 +116,8 @@ nav a:hover{ /*
 }
 
 .logo { /*This is the logo displayed on the Home Page*/
-    width: 315px;
-    height: 166px;
+    width: 300px;
+    height: auto;
 	margin-top: -45px;
 	margin-bottom: -35px;
   }
@@ -165,7 +164,7 @@ nav a:hover{ /*
     padding: 20px 20px 50px 20px;
     margin-left: 18%;
     margin-right: 18%;
-	margin-top: 120px;
+	margin-top: 80px;
 	font-size: 28px;
 }
 
@@ -261,10 +260,6 @@ nav a:hover{ /*
 }
 
 
-
-
-
-
 </style>
 
 
@@ -284,9 +279,9 @@ nav a:hover{ /*
             </div>     
         </div>
             <div class="homeImageText">
-                <img class="logo" src="{% static 'images/titanLogoTemp.png' %}">
+                <img class="logo" src="{% static 'images/logoLongWhite.png' %}">
                 <h1 class="homeHeader">Rocky Mountain<br>Work Service</h1>
-                <a class="helpButton" href="/register" target="_blank">FIND HELP</a>
+                <a class="helpButton" href="../register" target="_blank">FIND HELP</a>
 
             </div>
         </div>
@@ -410,7 +405,7 @@ nav a:hover{ /*
                 <div class="col-md-3">
                     <div class="footer-logo left">
                         <a href="https://titan307.com/team/">
-                            <img src="{% static 'images/TitanLogo4Real.png' %}" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img>
+                            <img src="{% static 'images/logoLongWhite.png' %}" itemprop="logo" alt="Logo" style="width:200px; background-image:none;" ></img>
                         </a>
                     </div>
                 </div>
