--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
     <div class="topContainer">
         <div class="Image">
             <a href="..\home">
-                <img class="pageLogo" src="{% static '/images/titanLogoTemp.png' %}"> 
+                <img class="pageLogo" src="{% static '/images/logoWhite.svg' %}"> 
             </a>
         </div>
 		<div class="links">
@@ -155,37 +155,34 @@
 				</div>
 	
 				<div class="footer-wrap">
-					<div class="content-width">
-						<div class="container-fluid">
-							<div class="row center">
-								<div class="col-md-3">
-									<div class="footer-logo left">
-										<a href="https://titan307.com/team/">
-											<img src="{% static 'images/TitanLogo4Real.png' %}" itemprop="logo" alt="Logo" style="width:auto; background-image:none;">
-										</a>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="link">
-										<div class="site-footer">
-											<div class="footerLinks-actions">
-												<div class="about">
-													<span>
-														<a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy & Security Statement</a>
-														<a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms & Conditions</a>
-													</span>
-												</div>
-												<a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-3">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+          <div class="content-width">
+              <div class="container-fluid">
+                  <div class="row center">
+                      <div class="col-md-3">
+                          <div class="footer-logo left">
+                              <a href="https://titan307.com/team/">
+                                  <img src="{% static 'images/logoWhite.svg' %}" itemprop="logo" alt="Logo" style="width:120px; margin-left:200px; background-image:none;"></img>
+                              </a>
+                          </div>
+                      </div>
+                      <div class="col-md-6"><div class="link">
+                          <div class="site-footer">
+                              <div class="footerLinks-actions">
+                                  <div class="about">
+                                      <span>
+                                          <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
+                                          <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
+                                      </span>
+                                  
+                                      <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
+                                  </div>
+                                    </span>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              <div class="col-md-3"><div></div>
+      </body>
 			</div>
 		</div>
 	</div>
@@ -220,9 +217,12 @@
 }
 
 .topContainer {
-    background-color:  #052534;
+  background-color:  #052534;
+    background-image: url(../static/images/constructionBg.svg);
+    background-position-x: right;
+    background-repeat: no-repeat;
     overflow: hidden;
-    height: 110px;
+    height: 120px;
   }
   
   /* Style the links inside the navigation bar */
@@ -363,8 +363,7 @@ color: #000000;
 
 .pageLogo {
   float: left;
-  width: auto;
-  height: 80px;
+  width: 100px;
   margin: .5%;
   position: absolute;
 }
@@ -404,6 +403,7 @@ color: #000000;
   width: 100%;
   max-width: 550px; 
   margin: 0 auto; 
+  margin-bottom: 2%;
   padding: 20px;
 }
 
@@ -415,12 +415,11 @@ color: #000000;
 /***********Footer***********/
 .footer-wrap .footerTabs a { font-size: 14px;font-weight: 300; }
 .footer-wrap .footerTabs a,.footer-wrap .footerLinks-actions a, .poweredby, .poweredby a { color: #fff; line-height: 2; }
-.footer-wrap .footerLinks-actions { margin-top: 37px;margin-left:315px }
+.footer-wrap .footerLinks-actions { margin-top: 30px;margin-left:250px }
 .footer-wrap .footerLinks-actions a, .poweredby, .poweredby a { font-size: 12px;margin-left:20px }
 .footer-wrap .about { color:white;margin-top: 0px;font-size: 12px;margin-left:-95px }
 .footer-wrap { background:#052534;padding-top:38px;padding-bottom:35px;padding-right:80px }
 .site-footer { color:white; }
 .footer-wrap .footerTabs a:hover, .footer-wrap .footerLinks-actions a:hover, .poweredby, .poweredby a:hover { color:#deff5b; }
-
 
 </style>
