--- a/templates/clientDashboard.html
+++ b/templates/clientDashboard.html
@@ -88,8 +88,9 @@
 				<p>Phone: {{ user_data.Phone }}</p>				
 			</div>
              <div class="card">
-                <h2>Quick Search</h2>
-                <a href="viewMatched.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewMatched.html')">Search Matches</a>
+                <h2>Show Matches</h2>
+                <p>Job Title:</p>
+                <p></p>
             </div>
         </div>
 		<div class="bigBoxContractor">
@@ -436,7 +437,7 @@ iframe {
 }
 
 .bigBox, .bigBoxContractor {
-  width: 55%;
+  width: 52%;
   box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.05);
   border-bottom:8px solid rgba(11, 63, 87, 1);
   border-left: 1px solid rgba(214, 214, 214, 1);
