Updated Names to be Rocky Mountain Work Services

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>About | Titan Finder</title>
+        <title>About | Rocky Mountain Work Services</title>
         <meta name="description" content="Home page for Website">
         <link rel="stylesheet" href="style_f.css">
         <link href="bootstrap3_f.css" rel="stylesheet" type="text/css">
