--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact | Titan Finder </title>
+    <title>Contact | Rocky Mountain Work Services </title>
     <meta name="description" content="Home page for Website">
     <link rel="stylesheet" href="style.css">
 	<link href="login+\bootstrap3.css" rel="stylesheet" type="text/css">
