--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
 <style>
-/* Megan ^-^ 
-nav a:hover{ /* 
-    background-color:rgb(235, 231, 231);
-} */
 
 .topnav { /*This is the navigation for the homepage. Unlike the other pages, the nav has no background.*/
     overflow: hidden;
@@ -58,7 +54,8 @@ nav a:hover{ /*
 
 .bgImg {
     position: relative;
-    background-color: rgba(35, 70, 236, .9);
+    background-color: rgba(5, 22, 104, 0.35);
+
     min-height: 400px;
     background-position: center;
     background-repeat: no-repeat;
@@ -267,7 +264,7 @@ nav a:hover{ /*
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home | Titan Finder </title>
+        <title>Home | Rocky Mountain Work Services </title>
         <meta name="description" content="Home page for Website">
         <div class="bgImg">
         <div class="topContainer">
