--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Register | Titan Finder </title>
+    <title>Register | Rocky Mountain Work Services </title>
     <meta name="description" content="Login page for Website">
 
 
