--- a/templates/clientDashboard.html
+++ b/templates/clientDashboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> Dashboard | Titan Finder </title>
+        <title> Dashboard | Rocky Mountain Work Services </title>
         <meta name="description" content="Client Dashboard">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 <header>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">Titan Finder</div>
+        <div class="logo_name">Rocky Mountain<br> Work Services</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
