Changes made to footer of pages.

--- a/templates/login.html
+++ b/templates/login.html
@@ -143,11 +143,10 @@
                             <div class="footerLinks-actions">
                                 <div class="about">
                                     <span>
-                                        <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
-                                        <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
+                                      <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About Our Service</a>
                                     </span>
                                 
-                                    <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
+                                    
                                 </div>
                                   </span>
                             </div>
