--- a/templates/register.html
+++ b/templates/register.html
@@ -135,8 +135,8 @@
 												<div class="col-sm-10">
 													<select class="input-required form-control" data-nullable="true" data-val="true" data-val-required="Error: You must enter a value for 'Registration Type'." id="Registration_Type__c" name="Registration_Type__c" tabindex="9">
 														<option value="" selected="selected">--Select--</option>
-														<option value="Interested in becoming a Titan Construction Partner (new contractors)">Interested in becoming a Titan Construction Partner (new contractors)</option>
-														<option value="Interested in contracting Titan Construction Partners">Interested in contracting Titan Construction Partners</option>
+														<option value="Interested in Becoming a Construction Partner (new contractors)">Interested in Becoming a Construction Partner (new contractors)</option>
+														<option value="Interested in contracting Construction Partners">Interested in contracting Construction Partners</option>
 													</select><span class="field-validation-valid errorMsg" data-valmsg-for="Registration_Type__c" data-valmsg-replace="true"></span><br></br>
 													<div class="form-group form-group-7">
 														<div class="col-md-offset-2 col-sm-10">
@@ -169,12 +169,7 @@
                           <div class="site-footer">
                               <div class="footerLinks-actions">
                                   <div class="about">
-                                      <span>
-                                          <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
-                                          <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
-                                      </span>
-                                  
-                                      <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
+                                      <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About Our Service</a>
                                   </div>
                                     </span>
                               </div>
