--- a/templates/home.html
+++ b/templates/home.html
@@ -411,11 +411,9 @@
                         <div class="footerLinks-actions">
                             <div class="about">
                                 <span>
-                                    <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
-                                    <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
+                                    <a href="../about" class="sitefooter-link-item" rel="nofollow" target="_top">About Our Service</a>
                                 </span>
                             </div>
-                                <a href="about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
                             </span>
                         </div>
                     </div>
