Edited registration acoount type message

--- a/templates/AdminDashboard.html
+++ b/templates/AdminDashboard.html
@@ -66,15 +66,12 @@
                  <span class="tooltip">Settings</span>
                </li>
                <li class="logout">
-                  <a href="login.html">
+                  <a href="/home">
                    <i class='bx bx-log-out' id="log_out" ></i>
                    <span class="logout">Logout</span>
                </a>
                </li>
-               <li class="profile">
-                  <i class ="bx bx-user" id="profile"></i>
-                  <span class="profile">Profile</span>
-               </li>
+              
               </ul>
             </div>
           </header>
