Updated home page to fit to clients need

--- a/templates/home.html
+++ b/templates/home.html
@@ -288,88 +288,10 @@
     <body>
         <div class="center">
             <h2>What We Offer.</h2>
-            <p> Our skilled team of laborers perform construction tasks and have the experience and certifications to provide our clients with service that is unparalleled in the industry.
+            <p> We offer companies the opportunity to find independent contractors in the construction business to complete work requests. 
             </p>
         </div>
          
-    <div class="bigContainer">
-         <div class="cardContainer">
-            <div class="innerCard">
-                <h3>General Construction</h3>
-                <p>General Construction including steel building erection, framing, and all items of construction in oil & gas, commercial, and heavy industrial industries.
-                </p>
-            </div>
-        </div>
-        
-        <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Welding Construction</h3>
-                <p>Piping fabrication, facility construction in oil & gas and heavy industrial industry.
-                </p>
-            </div>
-        </div>
-        
-        <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Concrete</h3>
-                <p>Foundations, flat work, and all other forms of concrete construction.
-                </p>
-            </div>
-        </div>
-    </div>
-        
-    <div class="bigContainer">
-         <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Excavation</h3>
-                <p>General excavation site preparation and stream bank rehabilitation.
-                </p>
-            </div>
-        </div>
-        
-        <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Sandblasting/Painting</h3>
-                <p>Sandblasting and coatings provided in the field and in our facility.
-                </p>
-            </div>
-        </div>
-        
-        <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Scaffolding</h3>
-                <p>Scaffolding installation in all industries.
-                </p>
-            </div>
-        </div>
-    </div>
-        
-    <div class="bigContainer">
-         <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Pipeline Maintenance</h3>
-                <p>All forms of pipeline maintenance including coatings, repairs, and anomaly digs.
-                </p>
-            </div>
-        </div>
-        
-        <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Fabrication</h3>
-                <p>All forms of shop fabrication including piping, structural steel, ferrous and non-ferrous materials.
-                </p>
-            </div>
-        </div>
-        
-        <div class="cardContainer">
-            <div class="innerCard">
-                <h3>Roustabout</h3>
-                <p>General oil and gas field facility maintenance.
-                </p>
-            </div>
-        </div>
-    </div>
-
     <div class="reviewText">
         <h2>OUR CUSTOMERS HAVE SPOKEN</h2>
         <h3>Why They Trust Us.</h3>
