--- a/templates/clientDashboard.html
+++ b/templates/clientDashboard.html
@@ -38,33 +38,12 @@
        <span class="tooltip">Create Job</span>
      </li>
      <li>
-       <a href="#">
-         <i class='bx bx-pie-chart-alt-2' ></i>
-         <span class="links_name">Analytics</span>
-       </a>
-       <span class="tooltip">Analytics</span>
-     </li>
-     <li>
-       <a href="#">
-         <i class='bx bx-folder' ></i>
-         <span class="links_name">File Manager</span>
-       </a>
-       <span class="tooltip">Files</span>
-     </li>
-     <li>
-       <a href="#">
-         <i class='bx bx-bell' ></i>
-         <span class="links_name">Notifications</span>
-       </a>
-       <span class="tooltip">Notifications</span>
-     </li>
-     <li>
-       <a href="#">
-         <i class='bx bx-cog' ></i>
-         <span class="links_name">Settings</span>
-       </a>
-       <span class="tooltip">Settings</span>
-     </li>
+      <a href="#">
+        <i class='bx bx-user' ></i>
+        <span class="links_name">Profile</span>
+      </a>
+      <span class="tooltip">Profile</span>
+    </li> 
      <li class="logout">
         <a href="/home">
          <i class='bx bx-log-out' id="log_out" ></i>
@@ -333,24 +312,7 @@
 .sidebar .logout {
     font-size: 15px;
     font-weight: 400;
-    color: #fff;
-}
-.sidebar li.profile{
-    position: fixed;
-    height: 110px;
-    width: 78px;
-    left: 0;
-    bottom: -14px;
-    padding: 10px 14px;
-    transition: all 0.5s ease;
     overflow: hidden;
-}
-.sidebar.open li.profile{
-    width: 250px;
-}
-.sidebar .profile {
-    font-size: 15px;
-    font-weight: 400;
     color: #fff;
 }
 .home-section{
